--- a/iraqdaybyday/src/App.css
+++ b/iraqdaybyday/src/App.css
@@ -1,21 +1,36 @@
-* {
-  outline: 3px solid red;
-}
+
 
 
 body {
-  margin: 1vw auto;
   max-width: 62vw;
-  line-height: 4vh;
-  font-size: 3.2vh;
   color: #252525;
-  padding: 0 1vh;
+  margin: auto;
 }
 
 
-h1,
-h2,
-h3 {
-  line-height: 8vh;
+.incident-container *{
+  outline: 1px red solid;
+}
+
+.incident-container {
+  display: grid;
+  justify-content: center;
+  grid-template-rows: auto;
+  row-gap: 1vh;
+}
+
+.incident {
+  display: grid;
+  text-align: center;
+  grid-template-columns: 11vw 11vw 11vw 11vw 11vw;
+  column-gap: 1vw;
+}
+
+.incident-title {
+  font-weight: 700;
+  font-size: 120%;
+}
+
+.incident-details {
 }
 
